-- Enum declarations
CREATE TYPE gender_enum AS ENUM (
	'male',
	'female',
	'rather_not_to_say'
);

CREATE TYPE user_status AS ENUM (
    'active',
    'suspended',
    'banned',
    'deleted'
);

CREATE TYPE post_category AS ENUM (
	'NORMAL', 
	'COMMENT', 
	'REPOST', 
	'QUOTE'
);

CREATE TYPE event_type AS ENUM (
    'VIEW_POST',
    'LIKE_POST',
    'DISLIKE_POST',
    'CREATE_COMMENT',
    'REPOST_POST',
    'FOLLOW_USER',
    'UNFOLLOW_USER',
    'VIEW_PROFILE',
    'CREATE_POST',
    'REQUEST_FEED',
    'LOGIN'
);

-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.users
(
    id bigint NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    username character varying(50) NOT NULL,
    display_name character varying(50) NOT NULL,
    email character varying(255) NOT NULL,
    password_hash text NOT NULL,
    created_at timestamp with time zone NOT NULL,
    bio text,
    gender gender_enum,
    location character varying(30),
    profile_picture bigint,
    status user_status NOT NULL DEFAULT 'active',
    PRIMARY KEY (id),
    UNIQUE (username),
    UNIQUE (email)
);

CREATE TABLE IF NOT EXISTS public.follows
(
    id bigint NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    created_at timestamp with time zone NOT NULL,
    follower_id bigint NOT NULL,
    followed_id bigint NOT NULL,
    PRIMARY KEY (id),
    UNIQUE (follower_id, followed_id)
);

CREATE TABLE IF NOT EXISTS public.media
(
    id bigint NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    size bigint NOT NULL,
    name character varying(255),
    mime_type character varying(100) NOT NULL,
    created_at timestamp with time zone NOT NULL,
    deleted_at timestamp with time zone,
    sha_256 character varying(64) NOT NULL,
    owner_id bigint,
    PRIMARY KEY (id),
    UNIQUE (sha_256)
);

COMMENT ON COLUMN public.media.size
    IS 'Size in bytes';

CREATE TABLE IF NOT EXISTS public.posts
(
    id bigint NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    user_id bigint NOT NULL,
    type post_category NOT NULL,
    content text,
    media_id bigint,
    created_at timestamp with time zone NOT NULL,
    updated_at timestamp with time zone,
    deleted_at timestamp with time zone,
    parent_id bigint,
    repost_of_id bigint,
    PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.reactions
(
    id bigint NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    reaction_type smallint NOT NULL,
    post_id bigint NOT NULL,
    user_id bigint NOT NULL,
    created_at timestamp with time zone NOT NULL,
    PRIMARY KEY (id),
    UNIQUE (post_id, user_id)
);

COMMENT ON COLUMN public.reactions.reaction_type
    IS '1 -> Like | -1 -> Dislike';

CREATE TABLE IF NOT EXISTS public.event_logs
(
    id bigint NOT NULL GENERATED BY DEFAULT AS IDENTITY,
    user_id bigint,
    type event_type NOT NULL,
    post_id bigint,
    target_user_id bigint,
    created_at timestamp with time zone NOT NULL,
    PRIMARY KEY (id)
);

ALTER TABLE IF EXISTS public.users
    ADD FOREIGN KEY (profile_picture)
    REFERENCES public.media (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.follows
    ADD FOREIGN KEY (follower_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE CASCADE
    NOT VALID;


ALTER TABLE IF EXISTS public.follows
    ADD FOREIGN KEY (followed_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE CASCADE
    NOT VALID;


ALTER TABLE IF EXISTS public.media
    ADD FOREIGN KEY (owner_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.posts
    ADD FOREIGN KEY (user_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE CASCADE
    NOT VALID;


ALTER TABLE IF EXISTS public.posts
    ADD FOREIGN KEY (media_id)
    REFERENCES public.media (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.posts
    ADD FOREIGN KEY (parent_id)
    REFERENCES public.posts (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.posts
    ADD FOREIGN KEY (repost_of_id)
    REFERENCES public.posts (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.reactions
    ADD FOREIGN KEY (post_id)
    REFERENCES public.posts (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE CASCADE
    NOT VALID;


ALTER TABLE IF EXISTS public.reactions
    ADD FOREIGN KEY (user_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE CASCADE
    NOT VALID;


ALTER TABLE IF EXISTS public.event_logs
    ADD FOREIGN KEY (user_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.event_logs
    ADD FOREIGN KEY (post_id)
    REFERENCES public.posts (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;


ALTER TABLE IF EXISTS public.event_logs
    ADD FOREIGN KEY (target_user_id)
    REFERENCES public.users (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE SET NULL
    NOT VALID;

END;

